--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>大宗匯款印單小幫手 (v6.2 循環修正版)</title>
+    <title>大宗匯款印單小幫手 (v6.2)</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
     
