--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>大宗匯款印單小幫手 (v19.9)</title>
+    <title>大宗郵政跨行匯款小幫手 (v19.9)</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
     
@@ -573,7 +573,7 @@
                         <div className="bg-white p-6 rounded-xl shadow-sm border-l-4 border-blue-600 flex flex-col md:flex-row justify-between items-center gap-4">
                             <div>
                                 <h1 className="text-2xl font-bold text-gray-800 flex items-center gap-2">
-                                    <IconUsers /> 大宗匯款印單小幫手
+                                    <IconUsers /> 大宗郵政跨行匯款小幫手
                                 </h1>
                                 <p className="text-sm text-gray-500 mt-1">v19.9 傻瓜印單完整版(Word樣版檔待更新)</p>
                             </div>
