修正 原始檔案來源 連結

--- a/index.html
+++ b/index.html
@@ -848,6 +848,9 @@
                                                     <a href="大宗郵政跨行匯款_合併列印.docx" className="inline-flex items-center justify-center gap-2 bg-purple-100 text-purple-700 px-4 py-3 rounded-lg font-bold hover:bg-purple-200 transition-colors border border-purple-200 w-fit">
                                                         <IconDownload /> 下載官方範本檔 (.docx)
                                                     </a>
+                                                    <a href="http://www.post.gov.tw/post/internet/Download/all_list.jsp?ID=2201#dl_link_512" target="_blank" rel="noopener noreferrer" className="text-purple-600 hover:text-purple-800 underline text-sm flex items-center gap-1">
+                                                        <IconExternalLink /> 原始檔案來源 (中華郵政)
+                                                    </a>
                                                 </div>
                                                 <div className="text-sm text-gray-500">
                                                     * 若使用新的「自動生成」按鈕，您只需準備一個命名為 <code>template.docx</code> 的範本檔放在同目錄下即可，無需手動合併列印。
